--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <!-- Custom CSS -->
     <link href="css/agency.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -275,9 +276,13 @@
                                 </div>
                             </div>
                             <div class="clearfix"></div>
+                            <div class="col-lg-12">
+                              <div class="g-recaptcha" data-sitekey="6LfP-BYTAAAAAPcKEhZpXx9byYNENMSxXsx0wm2u"></div>
+                            </div>
+                            <div class="clearfix">&nbsp;</div>
                             <div class="col-lg-12 text-center">
-                                <div id="success"></div>
-                                <button type="submit" class="btn btn-xl">Send Message</button>
+                              <div id="success"></div>
+                              <button type="submit" class="btn btn-xl">Send Message</button>
                             </div>
                         </div>
                     </form>
@@ -329,6 +334,7 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="js/agency.js"></script>
+    <script src='https://www.google.com/recaptcha/api.js'></script>
 
 </body>
 
